--- a/hosting/src/container/PatientForm/patientForm.module.scss
+++ b/hosting/src/container/PatientForm/patientForm.module.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
     gap: 10px;
     width: 400px;
-    padding: 20px;
+    padding: 30px;
     border-radius: 10px;
     border: 1px solid rgb(149, 147, 147);
+    margin: auto;
 }
