--- a/hosting/src/container/PatientForm/patientForm.module.scss
+++ b/hosting/src/container/PatientForm/patientForm.module.scss
@@ -1,10 +1,24 @@
-.formContainer{
+.container{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 400px;
-    padding: 30px;
-    border-radius: 10px;
-    border: 1px solid rgb(149, 147, 147);
     margin: auto;
+    align-self: center;
+
+    .title{
+        text-align: center;
+    }
+
+    .formContainer{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 30vw;
+        min-width: 300px;
+        max-width: 400px;
+        padding: 30px;
+        border-radius: 10px;
+        margin: auto;
+        align-self: center;
+    }
 }
