--- a/hosting/src/page/MainPage/mainPage.module.scss
+++ b/hosting/src/page/MainPage/mainPage.module.scss
@@ -1,11 +1,15 @@
 .container {
-    min-height: 90svh;
+    padding-top: 30px;
+    min-height: 100vh;
+    width: 100vw;
     display: flex;
     align-items: center;
-    padding: 20px;
-    gap: 20px;
+    gap: 10px;
+    justify-content: center;
+    transition: background-color  0.8s ease-in-out;
+    overflow-x: auto;
 
-    @media(max-width: 1050px) {
+    @media(max-width: 900px) {
         flex-direction: column;
     }
 }
