feat: styling UI FE

--- a/hosting/src/container/DataRetrieve/data.module.scss
+++ b/hosting/src/container/DataRetrieve/data.module.scss
@@ -3,10 +3,11 @@
     
     .title{
         text-align: center;
+        margin: 10px
     }
 
     .dataContainer{
-        height: 200px;
+        min-height: 200px;
         overflow-x: auto;
     }
 }
